// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`License Check Command --folder 1`] = `
Array [
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react@16.8.6        MIT",
  "react-is@16.8.6     MIT",
  "scheduler@0.13.6    MIT",
  "",
  "7/7 packages failed the license check",
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react@16.8.6        MIT",
  "react-is@16.8.6     MIT",
  "scheduler@0.13.6    MIT",
  "",
  "",
]
`;

exports[`License Check Command --package --allow 1`] = `
Array [
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "6/6 packages failed the license check",
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "",
]
`;

exports[`License Check Command --package --grouped 1`] = `
Array [
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "6/6 packages failed the license check",
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "",
]
`;

exports[`License Check Command --package --type 1`] = `
Array [
  "",
  "All packages passed the license check",
  "",
  "",
]
`;

exports[`License Check Command --package 1`] = `
Array [
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "6/6 packages failed the license check",
  "js-tokens@4.0.0     MIT",
  "loose-envify@1.4.0  MIT",
  "object-assign@4.1.1 MIT",
  "prop-types@15.7.2   MIT",
  "react-is@16.13.1    MIT",
  "scheduler@0.13.6    MIT",
  "",
  "",
]
`;
